{
  "version": 4,
  "terraform_version": "1.16.3",
  "serial": 37,
  "lineage": "a93361ca-adfd-e8dc-fdcd-39878eda692c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:508930776085:vpc/vpc-079ae6bcc7b72cba9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-003404c069625c32f",
            "default_route_table_id": "rtb-07e34a4b0fb6257bd",
            "default_security_group_id": "sg-0fd51d0fe194b18b4",
            "dhcp_options_id": "dopt-0a0697caa8f8f5267",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-079ae6bcc7b72cba9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e34a4b0fb6257bd",
            "owner_id": "508930776085",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "vpc-079ae6bcc7b72cba9",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:508930776085:network-acl/acl-00066a2a222351c4e",
            "default_network_acl_id": "acl-00066a2a222351c4e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-00066a2a222351c4e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "508930776085",
            "region": "ap-south-1",
            "subnet_ids": [
              "subnet-01e4c61674bb1b404",
              "subnet-02e4cf4e1e5125ba7",
              "subnet-04c77f3016d40bc08",
              "subnet-0e8a70b364d525036"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04ff459f4e593ad1c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:508930776085:route-table/rtb-07f37729cadb79d38",
            "default_route_table_id": "rtb-07f37729cadb79d38",
            "id": "rtb-07f37729cadb79d38",
            "owner_id": "508930776085",
            "propagating_vgws": null,
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-04ff459f4e593ad1c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:508930776085:security-group/sg-085f222a496539914",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-085f222a496539914",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "508930776085",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "my-vpc-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04ff459f4e593ad1c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fecf8cf188169174",
            "arn": "arn:aws:ec2:ap-south-1:508930776085:elastic-ip/eipalloc-0fecf8cf188169174",
            "domain": "vpc",
            "id": "eipalloc-0fecf8cf188169174",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-234-228-37.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.234.228.37",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Environment": "prod",
              "Name": "my-vpc-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "my-vpc-ap-south-1a",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "eipalloc-0fecf8cf188169174",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0af15acd5a810b45e",
            "arn": "arn:aws:ec2:ap-south-1:508930776085:elastic-ip/eipalloc-0af15acd5a810b45e",
            "domain": "vpc",
            "id": "eipalloc-0af15acd5a810b45e",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-7-44-73.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.44.73",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Environment": "prod",
              "Name": "my-vpc-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "my-vpc-ap-south-1b",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "eipalloc-0af15acd5a810b45e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6887298ee94bb6a",
            "arn": "arn:aws:ec2:ap-south-1:508930776085:elastic-ip/eipalloc-0b6887298ee94bb6a",
            "domain": "vpc",
            "id": "eipalloc-0b6887298ee94bb6a",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-6-224-41.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.224.41",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Environment": "prod",
              "Name": "my-vpc-ap-south-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "my-vpc-ap-south-1c",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "eipalloc-0b6887298ee94bb6a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:508930776085:internet-gateway/igw-04fe9439c9ec0f4a1",
            "id": "igw-04fe9439c9ec0f4a1",
            "owner_id": "508930776085",
            "region": "ap-south-1",
            "tags": {
              "Environment": "prod",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04ff459f4e593ad1c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "igw-04fe9439c9ec0f4a1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fecf8cf188169174",
            "association_id": "eipassoc-0a6349884c57c6fb0",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0f7465fcace274b40",
            "network_interface_id": "eni-02fff039395db2c88",
            "private_ip": "10.0.101.17",
            "public_ip": "13.234.228.37",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04c77f3016d40bc08",
            "tags": {
              "Environment": "prod",
              "Name": "my-vpc-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "my-vpc-ap-south-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04ff459f4e593ad1c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "nat-0f7465fcace274b40",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0af15acd5a810b45e",
            "association_id": "eipassoc-0254debf5912d99c9",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0144713aa670f61dd",
            "network_interface_id": "eni-0f23b46ef25e6ea8b",
            "private_ip": "10.0.102.240",
            "public_ip": "3.7.44.73",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02e4cf4e1e5125ba7",
            "tags": {
              "Environment": "prod",
              "Name": "my-vpc-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "my-vpc-ap-south-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04ff459f4e593ad1c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "nat-0144713aa670f61dd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6887298ee94bb6a",
            "association_id": "eipassoc-06dabf56bb372162c",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0f90d0e7514a1bc60",
            "network_interface_id": "eni-0eebcf25134352eee",
            "private_ip": "10.0.103.25",
            "public_ip": "3.6.224.41",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01e4c61674bb1b404",
            "tags": {
              "Environment": "prod",
              "Name": "my-vpc-ap-south-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "my-vpc-ap-south-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04ff459f4e593ad1c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "nat-0f90d0e7514a1bc60",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e6f6887b769848fe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f7465fcace274b40",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e6f6887b769848fe",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0e6f6887b769848fe"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bd9fafac4fab52541080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0144713aa670f61dd",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0bd9fafac4fab5254",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0bd9fafac4fab5254"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-085b113280f199d461080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f90d0e7514a1bc60",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-085b113280f199d46",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-085b113280f199d46"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04fe9439c9ec0f4a1",
            "id": "r-rtb-0c79f20b0c00d42451080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c79f20b0c00d4245",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0c79f20b0c00d4245"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:508930776085:route-table/rtb-0e6f6887b769848fe",
            "id": "rtb-0e6f6887b769848fe",
            "owner_id": "508930776085",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "my-vpc-private-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "my-vpc-private-ap-south-1a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ff459f4e593ad1c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "rtb-0e6f6887b769848fe",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:508930776085:route-table/rtb-0bd9fafac4fab5254",
            "id": "rtb-0bd9fafac4fab5254",
            "owner_id": "508930776085",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "my-vpc-private-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "my-vpc-private-ap-south-1b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ff459f4e593ad1c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "rtb-0bd9fafac4fab5254",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:508930776085:route-table/rtb-085b113280f199d46",
            "id": "rtb-085b113280f199d46",
            "owner_id": "508930776085",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "my-vpc-private-ap-south-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "my-vpc-private-ap-south-1c",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ff459f4e593ad1c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "rtb-085b113280f199d46",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:508930776085:route-table/rtb-0c79f20b0c00d4245",
            "id": "rtb-0c79f20b0c00d4245",
            "owner_id": "508930776085",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ff459f4e593ad1c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "rtb-0c79f20b0c00d4245",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053ca7fdee8456aac",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e6f6887b769848fe",
            "subnet_id": "subnet-0e8a70b364d525036"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "rtbassoc-053ca7fdee8456aac",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c701c04b7c02b31",
            "region": "ap-south-1",
            "route_table_id": "rtb-0bd9fafac4fab5254",
            "subnet_id": "subnet-0c2cf7159372667bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "rtbassoc-07c701c04b7c02b31",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9cd46dc8f68ff31",
            "region": "ap-south-1",
            "route_table_id": "rtb-085b113280f199d46",
            "subnet_id": "subnet-06521520662cf1d8a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "rtbassoc-0a9cd46dc8f68ff31",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0182781f4e5605608",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c79f20b0c00d4245",
            "subnet_id": "subnet-04c77f3016d40bc08"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "rtbassoc-0182781f4e5605608",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed19683ef13c0a17",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c79f20b0c00d4245",
            "subnet_id": "subnet-02e4cf4e1e5125ba7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "rtbassoc-0ed19683ef13c0a17",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cb3c20812546a5d",
            "region": "ap-south-1",
            "route_table_id": "rtb-0c79f20b0c00d4245",
            "subnet_id": "subnet-01e4c61674bb1b404"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "rtbassoc-08cb3c20812546a5d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:508930776085:subnet/subnet-0e8a70b364d525036",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8a70b364d525036",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "508930776085",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "prod",
              "Name": "my-vpc-private-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "my-vpc-private-ap-south-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04ff459f4e593ad1c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "subnet-0e8a70b364d525036",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:508930776085:subnet/subnet-0c2cf7159372667bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2cf7159372667bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "508930776085",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "prod",
              "Name": "my-vpc-private-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "my-vpc-private-ap-south-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04ff459f4e593ad1c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "subnet-0c2cf7159372667bd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:508930776085:subnet/subnet-06521520662cf1d8a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06521520662cf1d8a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "508930776085",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "prod",
              "Name": "my-vpc-private-ap-south-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "my-vpc-private-ap-south-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04ff459f4e593ad1c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "subnet-06521520662cf1d8a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:508930776085:subnet/subnet-04c77f3016d40bc08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c77f3016d40bc08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "508930776085",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "prod",
              "Name": "my-vpc-public-ap-south-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "my-vpc-public-ap-south-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04ff459f4e593ad1c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "subnet-04c77f3016d40bc08",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:508930776085:subnet/subnet-02e4cf4e1e5125ba7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e4cf4e1e5125ba7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "508930776085",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "prod",
              "Name": "my-vpc-public-ap-south-1b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "my-vpc-public-ap-south-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04ff459f4e593ad1c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "subnet-02e4cf4e1e5125ba7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:508930776085:subnet/subnet-01e4c61674bb1b404",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e4c61674bb1b404",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "508930776085",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "prod",
              "Name": "my-vpc-public-ap-south-1c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "my-vpc-public-ap-south-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-04ff459f4e593ad1c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "subnet-01e4c61674bb1b404",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:508930776085:vpc/vpc-04ff459f4e593ad1c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00066a2a222351c4e",
            "default_route_table_id": "rtb-07f37729cadb79d38",
            "default_security_group_id": "sg-085f222a496539914",
            "dhcp_options_id": "dopt-0a0697caa8f8f5267",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04ff459f4e593ad1c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07f37729cadb79d38",
            "owner_id": "508930776085",
            "region": "ap-south-1",
            "tags": {
              "Environment": "prod",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "my-vpc",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "508930776085",
            "id": "vpc-04ff459f4e593ad1c",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}